skorowidz.h: - zmiana z list_t na int **linie w skorowidz.h - modyfikacja funkcji dodaj_pozycje_skorowidza w skorowidz.c - modyfikacja wypisz_skorowidz w skorowidz.c - dostosowanie do zmiany na wektor int **linie - napisanie int *dodaj_do_listy() w list.* - usunięcie definicji typu list_t z list.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 project(JIMP_LMP7 C)
 
 set(CMAKE_C_STANDARD 90)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(JIMP_LMP7 indx4.c list.c list.h skorowidz.c skorowidz.h)
